@@ -1,3 +1,4 @@
+1926 [FFMSIndexer] improved audio track number detection. Bug #3165894
 1925 [Settings] added option to ensure correct playback speed while playing the video preview (defaults to disabled) 
 1924 [VideoPlayer] fixed invisible video pixels at the right (7) and bottom (1). Bug #3164635
                    added 1:1 video preview. Feature request #3164305
